language/move-lang/tests/move_check/parser/unexpected_token_after_ability_function_constraint.move
address 0x42 {
module M {
    // incorrect delim for ability constraint
    fun foo<T: copy & drop>() {}
}
}
